fixs post index and show page on mobile

--- a/app/assets/stylesheets/_post_projects.css.scss
+++ b/app/assets/stylesheets/_post_projects.css.scss
@@ -4,7 +4,7 @@
 	.post{
 		text-align: center;
 		.date{
-			font-size: .9em;
+			font-size: 1.1em;
 			margin: 0;
 
 		}
@@ -129,3 +129,40 @@
 		}
 	}
 }
+
+
+/* ======= RESPONSIVE QUERIES BY GIO ====== */
+
+    /*==========  Mobile First Method  ==========*/
+
+    /* Custom, iPhone Retina */ 
+    @media only screen and (max-width : 320px) {
+
+    #posts_wrapper .post h2 a {
+	    text-decoration: none;
+	    font-size: 1em;
+	    color: #424652;
+	}
+        
+    }
+
+    /* Extra Small Devices, Phones */ 
+    @media only screen and (max-width : 480px) {
+
+
+    }
+
+    /* Small Devices, Tablets */
+    @media only screen and (min-width : 768px) {
+
+    }
+
+    /* Medium Devices, Desktops */
+    @media only screen and (min-width : 992px) {
+
+    }
+
+    /* Large Devices, Wide Screens */
+    @media only screen and (min-width : 1200px) {
+
+    }
