--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -129,7 +129,7 @@ hr{
 	text-align: center;
 	border-bottom: 1px solid $border;
 	padding: 3em 0;
-	font-size: 1rem;
+	font-size: 1.7rem;
 	text-transform: uppercase;
 }
 
@@ -225,6 +225,10 @@ input[type="submit"], .button{
 		.wrapper_padding {
 		    padding: 4rem 0;
 		    text-align: center;
+		}
+
+		#page_title{
+		font-size: 1.2rem;
 		}
 
     }
